--- a/cookingRecipesClient/src/app/pages/create-recipe-view/create-recipe-view.component.css
+++ b/cookingRecipesClient/src/app/pages/create-recipe-view/create-recipe-view.component.css
@@ -1,12 +1,53 @@
 .toolbar{
     height: 125px;
+    background: linear-gradient(to bottom right, #c2185b,#be5982)
 }
 
 .title{
     color:white;
 }
 
+.createTitle{
+    text-align:center;   
+    max-width: 900px;
+    font-size: 35px;
+    margin-bottom: 0px;
+    padding-top:12px;
+}
+
+.titleDiv{
+    color:white;
+    max-width: 900px;
+    align-self: center;
+    margin:auto;
+    background: linear-gradient(to bottom right, #c2185b,#be5982);
+    height: 60px;
+    border-radius: 25px;
+}
+
+.header{
+    background: #eecbd9;
+    height:100px;
+    padding-top: 20px;;
+}
+
+
 .createRecipeLayout{
     padding-top: 20px;
     text-align: center;
+    
+}
+
+.mat-expansion-panel{
+    background: linear-gradient(to bottom right, #092397,#1749f0);
+}
+
+.mat-accordion .mat-expansion-panel:first-of-type {
+    border-top-right-radius: 25px;
+    border-top-left-radius: 25px;
+}
+
+.mat-accordion .mat-expansion-panel:last-of-type {
+    border-bottom-right-radius: 25px;
+    border-bottom-left-radius: 25px;
 }
