--- a/cookingRecipesClient/src/app/pages/recipe-view/recipe-view.component.scss
+++ b/cookingRecipesClient/src/app/pages/recipe-view/recipe-view.component.scss
@@ -1,15 +1,37 @@
 .toolbar{
     height: 125px;
+    background: linear-gradient(to bottom right, #c2185b,#be5982);
 }
 
 .title{
     color:white;
 }
 
+
+
+.titleDiv{
+    color:white;
+    max-width: 900px;
+    align-self: center;
+    margin:auto;
+    background: linear-gradient(to bottom right, #c2185b,#be5982);
+    height: 60px;
+    border-radius: 25px;
+}
+
+.header{
+    background: #eecbd9;
+    height:100px;
+    padding-top: 20px;;
+}
+
+
 .mat-stepper-vertical {
     margin-top: 8px;
+    background: linear-gradient(to bottom right, #092397,#1749f0);
+    border-radius: 25px;
 }
-  
+
 .mat-form-field {
     margin-top: 16px;
 }
@@ -24,9 +46,21 @@
 }
 
 .recipeStepsView{
-   
+    margin-top: 0;
 }
 
 .recipeTitle{
-    margin-top: 40px;
+    text-align:center;   
+    max-width: 900px;
+    font-size: 35px;
+    margin-bottom: 0px;
+    padding-top:12px;
+}
+
+.mat-button:hover{
+    background: #be5982;
+}
+
+.mat-button{
+    background: #c2185b;
 }
