--- a/cookingRecipesClient/src/app/pages/recipes-list-view/recipes-list-view.component.scss
+++ b/cookingRecipesClient/src/app/pages/recipes-list-view/recipes-list-view.component.scss
@@ -1,9 +1,11 @@
 .toolbar{
     height: 125px;
+    background: linear-gradient(to bottom right, #c2185b,#be5982)
 }
 
 .title{
     color:white;
+  
 }
 
 #searchBarDiv{
@@ -34,6 +36,10 @@
     overflow: hidden;
 }
 
+.mat-card{
+    background: linear-gradient(to bottom right, #c2185b,#be5982)
+}
+
 .mat-card-content {
     text-overflow: ellipsis;
     overflow: hidden;
@@ -57,13 +63,22 @@
     padding-top: 20px;
     padding-left: 5%;
     align-items: center;
+    background: linear-gradient(to bottom right, #344966,#B4CDED);
+}
+
+.mat-raised-button:hover{
+    background: linear-gradient(to bottom right, #092397,#4970f0)
 }
 
 .mat-card:active{
-    background-color: lightgray;
+    background: lightgray;
 }
 
 .mat-card:hover{
     cursor:pointer;
-    color: #DDD;
+    background: linear-gradient(to bottom right, #092397,#4970f0)
+}
+
+.searchStuff{
+    background: #eecbd9;
 }
