--- a/cookingRecipesClient/src/main-styless.scss
+++ b/cookingRecipesClient/src/main-styless.scss
@@ -3,8 +3,8 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700|Nunito:400,700');
 
 $red: #fc0202;
-$light-red: #f8a4a4;
-$pink: #f18496;
+$light-red: #f5f4f4;
+$pink: #9d9fa0;
 $light-gray: #e7e7e7;
 
 $family-sans-serif: "Nunito", sans-serif;
@@ -17,7 +17,8 @@ $input-border-color:transparent;
 $input-shadow: none;
 
 html{
-    background: linear-gradient(to bottom right, $pink,$light-red);
+    background: linear-gradient(to bottom right, #344966,#B4CDED);
+    
 }
 
 html, body{
